# telemetry-demo

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
dockerfiles/: flask.dockerfile  service1.dockerfile  service2.dockerfile
telemetry_demo/: app.py  basic-trace-example.py  flask-instrumentation-example.py  jaeger-export-example.py  send-to-collector-example-service-1.py  send-to-collector-example-service-2.py
telemetry_demo/collector_config/: otel-collector-config.yaml
tests/: test_telemetry_demo.py
